--- a/package.json
+++ b/package.json
@@ -10,34 +10,35 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19.0",
-        "bootstrap": "^4.0.0",
+        "axios": "^0.19.2",
+        "bootstrap": "^4.5.3",
         "cross-env": "^5.1",
         "jquery": "^3.5.1",
-        "laravel-mix": "^5.0.5",
+        "laravel-mix": "^5.0.7",
         "lodash": "^4.17.20",
-        "popper.js": "^1.12",
+        "popper.js": "^1.16.1",
         "resolve-url-loader": "2.3.1",
-        "sass": "^1.20.1",
+        "sass": "^1.27.0",
         "sass-loader": "7.*",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue": "^2.6.12",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.1",
         "@websanova/vue-auth": "^2.21.14-beta",
         "bootstrap-sass": "^3.4.1",
         "es6-promise": "^4.2.8",
         "express": "^4.17.1",
         "ioredis": "^4.17.3",
-        "laravel-echo": "^1.8.0",
-        "moment": "^2.25.3",
+        "laravel-echo": "^1.9.0",
+        "moment": "^2.29.1",
         "node-sass": "^4.14.1",
         "pusher-js": "^6.0.3",
         "redis": "^3.0.2",
         "socket.io": "^2.3.0",
-        "socket.io-client": "^2.3.0",
+        "socket.io-client": "^2.3.1",
         "vue-axios": "^2.1.5",
-        "vue-router": "^3.1.3",
-        "vuex": "^3.3.0"
+        "vue-router": "^3.4.7",
+        "vuex": "^3.4.0"
     }
 }
