--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
         "@websanova/vue-auth": "^2.21.14-beta",
+        "ant-design-vue": "^1.6.5",
         "bootstrap-sass": "^3.4.1",
         "es6-promise": "^4.2.8",
         "express": "^4.17.1",
