--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "socket.io": "^2.3.0",
         "socket.io-client": "^2.3.1",
         "vue-axios": "^2.1.5",
+        "vue-carousel": "^0.18.0",
         "vue-router": "^3.4.7",
         "vuejs-paginate": "^2.1.0",
         "vuex": "^3.4.0"
