--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "socket.io-client": "^2.3.1",
         "vue-axios": "^2.1.5",
         "vue-carousel": "^0.18.0",
+        "vue-multiselect": "^2.1.6",
         "vue-router": "^3.4.7",
         "vuejs-paginate": "^2.1.0",
         "vuex": "^3.4.0"
