--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
         "bootstrap": "^4.5.3",
         "cross-env": "^5.1",
         "jquery": "^3.5.1",
-        "laravel-mix": "^5.0.7",
+        "laravel-mix": "^5.0.9",
         "lodash": "^4.17.20",
         "popper.js": "^1.16.1",
         "resolve-url-loader": "2.3.1",
-        "sass": "^1.27.0",
+        "sass": "^1.29.0",
         "sass-loader": "7.*",
         "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.12"
@@ -26,7 +26,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
         "@websanova/vue-auth": "^2.21.14-beta",
-        "ant-design-vue": "^1.6.5",
+        "ant-design-vue": "^1.7.2",
         "bootstrap-sass": "^3.4.1",
         "es6-promise": "^4.2.8",
         "express": "^4.17.1",
@@ -40,8 +40,9 @@
         "socket.io-client": "^2.3.1",
         "vue-axios": "^2.1.5",
         "vue-carousel": "^0.18.0",
-        "vue-router": "^3.4.7",
+        "vue-multiselect": "^2.1.6",
+        "vue-router": "^3.4.9",
         "vuejs-paginate": "^2.1.0",
-        "vuex": "^3.4.0"
+        "vuex": "^3.6.0"
     }
 }
