--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "vue-carousel": "^0.18.0",
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.4.9",
+        "vuedraggable": "^2.24.3",
         "vuejs-paginate": "^2.1.0",
         "vuex": "^3.6.0"
     }
